# cronos-desktop

./: Makefile  README.md  diesel.toml  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx  routes.tsx  theme.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/v00001_create_table_profesional/: down.sql  up.sql
src-tauri/migrations/v00002_create_table_phones/: down.sql  up.sql
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/api/commands/: profesional.rs
src-tauri/src/api/models/: appointment.rs  customer.rs  healthcare.rs  mod.rs  profesional.rs  room.rs
src-tauri/src/api/parsers/: profesional.rs
src-tauri/src/repository/: db_connection.rs  migration.rs  mod.rs  profesional.rs
src-tauri/src/repository/models/: mod.rs  profesional.rs  schema.rs
src/bindings/: Appointement.ts  AppointmentEvent.ts  Customers.ts  CustomersPhones.ts  Healthcare.ts  HealthcarePhones.ts  Profesionals.ts  ProfesionalsByRooms.ts  ProfesionalsPhones.ts  Rooms.ts
src/components/: AppContent.tsx  AppFooter.tsx  AppHeader.tsx  AppSidebar.tsx  BigCalendar.tsx  EmptyRows.tsx  Header.tsx  Stats.tsx  StatsCurrentsAppointments.tsx  StatsMedium.tsx  TableHeader.tsx
src/i18n/: i18n.tsx  i18nSwitch.tsx
src/i18n/en/: en.json
src/i18n/es/: es.json
src/mock-data/: LoadersMockData.tsx  appointments.tsx  customers.tsx  healtcare.tsx  healthcare.tsx  profesional.tsx  rooms.tsx
src/services/: CustomerService.tsx  HealtCareService.tsx  HealthcareService.tsx  ProfesionalService.tsx  RoomsService.tsx
src/state/: Store.tsx
src/state/models/: RoomsState.tsx  (+4 more)
(+29 files in other folders)
