[package]
name = "cronos-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
log = "0.4.17"
tauri-plugin-log = {git = "https://github.com/tauri-apps/tauri-plugin-log", branch = "dev", features = ["colored"] }
diesel = { version = "2.0.2", features = ["sqlite", "chrono", "uuid"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
dotenv = "0.15.0"
uuid = { version = "1.2.2", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
#chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "rkyv"], optional = true }
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std", "serde"] }
ts-rs = {version = "6.2", features= ["format"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
